Added Upgrade password functionality